- Exposed Limited spell property to the Print method to be used by character sheets.
- SelectText nodes that use a custom xpath can now handle language keys directly instead of going through a text translation process.
- The extras language translator can now also automatically find and translate keyed language strings instead of just translate(d) nodes from the XML data.

Data Changes:
- Concealed and Regular vehicle armor mods now properly add to their parent's Armor. Fixes #4925.
- Greyware is now properly disallowed for biodrone cyberware, cybersuites, nanocybernetics, and implanted commlinks and cyberdecks.
- Vindicator 200-round belts can no longer be bought as gear, only as weapon accessories. However, the weapon accessory version now has slots for loading in ammo, just like the weapon accessory versions of spare clips and speed loaders.
- Spare clips and speed loaders bought as gear now properly only allow the user to select ranged weapon types that can accommodate them instead of any ranged weapon.
- Added Maker Arms weapons and magazines from Street Lethal. Maker mags are not fully functional, however, so users will need to track used and consumed capacities manually.
- Fixed the names of corporate weapons and armor from Street Lethal made by subsidiaries to no longer show the corporate owner.
- Added the Nemesis Arms Man-Catcher, torpedo grenades, Spinstorm Ferrous Slug ammo, Grey Goo Armor Eater ammo, and Grey Goo Penetrator ammo from Street Lethal.
- Fixed the vehicle mods on the Maersk Shipyards Wavecutter MPAC. Existing characters with this vehicle will need to re-add it to seen its changes.
- Fixed the name, ammo capacity type, and built-in accessories of the Wuxing-Armtech PTL-02.
- Numinous Perception has been added as an example Perception specialization based on page 314 of the core rulebook.
- Flamethrower propely has the Elemental descriptor.
- Core Character sheets now show Alchemical and Limited properties in spell names. Implements #4929.